# brain_activity

./: .gitignore
sleep-stage-prediction/: .gitignore  README.md  download_and_extract.py  kaggle_sleep_stage_prediction.ipynb  main.py  pyproject.toml  requirements.txt  tvb_visualize.py
sleep-stage-prediction/docs/: current_data_audit.md  openneuro_dataset_research.md  sota_sleep_staging_research.md
sleep-stage-prediction/legacy/kaggle/: kaggle_sleep_stage_prediction.py
sleep-stage-prediction/scripts/: add_sequence_context.py  add_transition_features.py  analyze_cv_predictions.py  analyze_n1_errors.py  analyze_subject_shift.py  audit_dataset.py  augment_feature_set.py  combine_feature_sets.py  compare_group_models.py  diagnose_feature_quality.py  download_openneuro_subset.py  evaluate_dataset_transfer.py  evaluate_n1_focus.py  extract_ds006695_spectrograms.py  extract_external_bids_sleep.py  extract_features.py  make_balanced_subset.py  normalize_feature_set.py  run_pipeline.py  summarize_model_selection.py  train_group_model.py  train_model.py  train_spectrogram_sequence_model.py  tune_random_forest_optuna.py  visualize_tvb.py
sleep-stage-prediction/src/: data_loader.py  feature_extraction.py  train_model.py  visualize.py
sleep-stage-prediction/src/sleep_stage_prediction/: __init__.py  data_loader.py  external_bids_sleep.py  feature_extraction.py  metadata.py  training.py  visualization.py
