[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sleep-stage-prediction"
version = "0.1.0"
description = "Local-first EEG sleep stage prediction pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "joblib",
  "matplotlib",
  "mne",
  "numpy",
  "pandas",
  "scikit-learn",
  "scipy",
  "seaborn",
]

[project.optional-dependencies]
gbm = [
  "catboost",
  "lightgbm",
  "xgboost",
]
tuning = [
  "optuna",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
